# MultiAgentTrading_using_KITE_MCP

./: .replit  README.md  app.py  enhanced_web_app.py  main.py  main_enhanced.py  mvp_structure.md  pyproject.toml  replit.md  web_app.py
agents/: bear_researcher.py  bull_researcher.py  fundamentals_analyst.py  market_data_agent.py  news_analyst.py  portfolio_manager.py  research_arbiter.py  risk_arbiter.py  risk_assessment_agent.py  risk_dove.py  risk_hawk.py  risk_owl.py  sentiment_analyst.py  signal_generation_agent.py  technical_analysis_agent.py  trade_strategist.py
attached_assets/: Pasted-Replit-Project-Prompt-Multi-Agent-Algorithmic-Trading-System-MVP-Objective-Develop-a-Minimum-Vi-1752230889459_1752230889459.txt
config/: default_config.py  settings.py
graph/: __init__.py  agent_graph.py  graph_conditions.py
models/: trading_state.py
services/: enhanced_trading_orchestrator.py  kite_mcp_client.py  sample_data_service.py  sample_llm_service.py  trading_orchestrator.py
strategies/: simple_rsi_strategy.py
templates/: enhanced_dashboard.html  index.html
utils/: agent_memory.py  logging_config.py  technical_indicators.py
