[project]
name = "multi-agent-kite-trader"
version = "0.2.0"
description = "Multi-agent algorithmic trading system with debate-driven analysis and Zerodha KITE MCP integration"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "flask>=3.1.1",
    "langchain>=0.3.26",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "numpy>=2.3.1",
    "openai>=1.95.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
